MODIFY version | 1.0.4 MODIFY readme | added to screenshots: process, report MODIFY api | added to setter/getter cache MODIFY data | introduced to serial port callback when open/close MODIFY data | persisted to report label, marker, legend option MODIFY data | changed to getter/setter in data MODIFY home | added to forced start for demo MODIFY process | added to some process example using timer and circle progress MODIFY report | added to some report example using CSV

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "reset": "npm run clean && del-cli --force node_modules/ package-lock.json pubspec.lock web/pubspec.yaml web/pubspec.lock web/.dart_tool web/middleware/db/data.sqlite3",
+    "reset": "npm run clean && del-cli --force node_modules/ package-lock.json pubspec.lock web/pubspec.yaml web/pubspec.lock web/node_modules web/.dart_tool web/middleware/db/data.sqlite3",
     "clean": "npm run app:clean && npm run mw:clean && del-cli --force dist/",
     "build": "npm run mw:build && npm run app:build",
     "rebuild": "npm run clean && npm run build",
