--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2+1
+version: 1.0.4+1
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -57,6 +57,13 @@ dependencies:
   # Provides APIs for debugging and error logging, similar to loggers in other languages, 
   # such as the Closure JS Logger and java.util.logging.Logger.
   logging: ^1.1.0
+
+  # The Flutter Charts package is a data visualization library written natively in Dart for creating beautiful,
+  # animated and high-performance charts, which are used to craft high-quality mobile app user interfaces using Flutter.
+  syncfusion_flutter_charts: ^20.3.52
+
+  # A codec to transform between a string and a list of values. The string must be comma (configurable) separated values.
+  csv: ^5.0.1
 
 dev_dependencies:
   flutter_test:
