ADD sample.csv file MODIFY show to file dialog and import csv data from file MODIFY added to demo option in settings MODIFY added to landing page and tabs with text in main MODIFY changed to screenshots: home, settings, report

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,10 @@ dependencies:
   # Flutter plugin for displaying inline video with other Flutter widgets on Android, iOS, and web.
   video_player: ^2.4.7
 
+  # A package that allows you to use a native file explorer to pick single or multiple absolute file paths,
+  # with extension filtering support.
+  file_picker: ^5.2.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
